# XOPT

./: .gitignore  LICENSE  README.md  init.sh  vercel.json
.github/workflows/: build-chain.yml  build-crowdloan.yml  build-frontend.yml  build.yml  deploy.yml  lint.yml
chain/: Cargo.toml
chain/node/: Cargo.toml
chain/node/src/: lib.rs  main.rs
chain/pallets/options/: Cargo.toml
chain/pallets/options/src/: lib.rs
chain/pallets/oracle/: Cargo.toml
chain/pallets/oracle/src/: lib.rs
chain/pallets/template/: Cargo.toml
chain/pallets/template/src/: lib.rs
chain/pallets/vaults/: Cargo.toml
chain/pallets/vaults/src/: lib.rs
chain/pallets/xopt-token/: Cargo.toml
chain/pallets/xopt-token/src/: lib.rs
chain/runtime/: Cargo.toml
chain/runtime/src/: lib.rs
crowdloan-ui/: package-lock.json  package.json  tsconfig.json  vercel.json
crowdloan-ui/components/: ContributionForm.tsx  Features.tsx  Hero.tsx
crowdloan-ui/pages/: index.tsx
crowdloan-ui/src/__tests__/: ContributeForm.test.tsx  Home.test.tsx  WalletConnect.test.tsx
crowdloan-ui/src/app/: layout.tsx  page.tsx
crowdloan-ui/src/app/contribute/: ContributeForm.tsx  page.tsx
crowdloan-ui/src/app/learn-more/: page.tsx
crowdloan-ui/src/components/: ContributionForm.tsx  Footer.tsx  Hero.tsx  LearnMore.tsx  Navigation.tsx  ThemeToggle.tsx  WalletConnect.tsx
crowdloan-ui/src/hooks/: useCrowdloanForm.ts  useWallet.ts
crowdloan-ui/src/types/: index.ts
docs/: architecture.md  governance.md  whitepaper.md
frontend/: next.config.js  package-lock.json  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/public/: favicon.html
frontend/src/__tests__/: Home.test.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/learn-more/: page.tsx
frontend/src/app/trade/: page.tsx
frontend/src/components/: ContributionForm.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navigation.tsx  Stats.tsx  ThemeToggle.tsx
subquery/: docker-compose.yml  package.json  project.yaml  schema.graphql  tsconfig.json
subquery/src/: types.ts
subquery/src/mappings/: index.ts  meta.ts
