[package]
name = "xopt-chain"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    'node',
    'pallets/*',
    'runtime'
]

[[bin]]
name = "xopt-node"
path = "node/src/main.rs"

[workspace.dependencies]
sc-cli = { version = "0.1.0", git = "https://github.com/paritytech/substrate.git", tag = "v21.0.0" }
sc-service = { version = "0.1.0", git = "https://github.com/paritytech/substrate.git", tag = "v21.0.0" }
sp-core = { version = "21.0.0", default-features = false }
sp-runtime = { version = "21.0.0", default-features = false }
sp-std = { version = "21.0.0", default-features = false }
sp-io = { version = "21.0.0", default-features = false }
sp-api = { version = "21.0.0", default-features = false }
frame-support = { version = "21.0.0", default-features = false }
frame-system = { version = "21.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "21.0.0", default-features = false }
frame-try-runtime = { version = "21.0.0", default-features = false }
pallet-balances = { version = "21.0.0", default-features = false }
pallet-timestamp = { version = "21.0.0", default-features = false }
pallet-transaction-payment = { version = "21.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "21.0.0", default-features = false }
pallet-sudo = { version = "21.0.0", default-features = false } 