[package]
name = "xopt-node"
version = "0.1.0"
edition = "2021"

[dependencies]
sc-cli = { workspace = true }
sc-service = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-consensus-slots = { workspace = true }
sp-consensus-uncles = { workspace = true }
sp-finality-grandpa = { workspace = true }
sp-finality-tracker = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true } 