[package]
name = "xopt-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-api = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-sudo = { workspace = true }
pallet-options = { path = "../pallets/options" }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev" } 